--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,38 +1,24 @@
 {
-  "name": "gestor-containers",
-  "version": "0.1.0",
+  "name": "frontend",
+  "version": "1.0.0",
   "private": true,
-  "browser": {
-    "crypto": "crypto-browserify",
-    "os": false,
-    "constants": false
-  },
   "dependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "babel-loader": "^8.2.4",
-    "body-parser": "^1.19.2",
-    "bootstrap": "^5.1.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "jquery": "^3.2.1",
-    "jquery-mask-plugin": "^1.14.16",
-    "mssql": "^8.0.2",
-    "popper": "^1.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^2.1.4",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router": "^6.26.2",
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -53,12 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "css-loader": "^6.7.1",
-    "html-loader": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "style-loader": "^3.3.1",
-    "webpack-dev-server": "^4.7.4"
   }
 }
